--- a/about.html
+++ b/about.html
@@ -41,30 +41,30 @@
     </nav>
 
     <main class="homeContainer">
-      <div class="homeBgImage">
-        <h2>Lorem ipsum dolor sit amet.</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptate quasi quaerat, voluptatem ullam eum!</p>
-      </div>
+        <div class="homeBgImage">
+            <h2>shopingCoin: le coin de shopping en ligne</h2>
+            <p>Trouvez-vous des sacs, d'habits, d'accessoires et tout autres types de produit à prix abordable avec livraison gratuite</p>
+        </div>
 
       <div class="homeButton">
         <a class="btn btn-lg btn-primary" href="index.html#products" role="button">Voir les produits</a>
         <div class="homeButtonContent">
           <div class="homeButtonCard homeButtonCard1">
             <h4 class="homeButtonCardTitle">Sacs</h4>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita excepturi, delectus itaque modi vitae dicta!
+            Des sacs de qualité pour vous faire remarquer
             <img src="assets/img/icons/bag.png" width="70" height="70" alt="icon">
           </div>
           <div class="homeButtonCard homeButtonCard1">
             <div class="homeButtonCard homeButtonCard1">
               <h4 class="homeButtonCardTitle">Vêtements</h4>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita excepturi, delectus itaque modi vitae dicta!
+              Vêtements de qualité à des prix abordables
               <img src="assets/img/icons/clothes.png" width="70" height="70" alt="icon">
             </div>
           </div>
           <div class="homeButtonCard homeButtonCard1">
             <div class="homeButtonCard homeButtonCard1">
               <h4 class="homeButtonCardTitle">Accessoires</h4>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita excepturi, delectus itaque modi vitae dicta!
+              Trouvez des accessoires de tout type: cusine, matériel informatique, accessoires de jeux,...
               <img src="assets/img/icons/jewelry.png" width="70" height="70" alt="icon">
             </div>
           </div>
@@ -74,13 +74,17 @@
       <div class="aboutUs">
         <h2>Qui sommes-nous?</h2>
         <p>Nous sommes une société spécialisée dans la vente des habits, sacs, accessoires,...</p>
+        <p>Nous offrons un service de livraison rapide et gratuite. il suffit de nous contacter et de passer votre commande en ligne</p>
+        <p>Abonnez-vous à la <a href="#newsletter">newsleter</a> pour être informé de noud nouveaux produits</p>
         <p>Ce site a été développé par <a href="https://caleblyc.github.io/mon-app" target="_blank">Caleb LYC</a>. Voir son <a href="" target="_blank">portfolio</a></p>
-      </div>
+        <p>Toute personne désireuse d'avoir un site de ce genre peut nous contacter sur le <span class="number">+228 91982996</span> ou nous laisser un mail <a href="mailto:@caleblyc.com">ici</a></p>
+        <p>Un site de ce genre lui sera développé voir un site e-commerce complet selon ses besoins, ses goûts et ses préférences.</p>
+    </div>
 
       <div class="avis">
         <h3>Avis de nos client</h3>
         <div class="avisContainer">
-            
+
         </div>
       </div>
     </main>
@@ -110,7 +114,7 @@
           <li><img src="assets/img/icons/telephone.png" width="30" height="30" alt="icon">  tel: +228 91982996</li>
           <li><img src="assets/img/icons/gmail.png" width="30" height="30" alt="icon">  email <a href="mailto:caleblyc@gamail.com">caleblyc@gmail.com</a></li>
           <h3>S'abonner à la newsletter</h3>
-          <form action="">
+          <form action="" method="POST" id="newsletter">
             <div class="email">
               <label for="email">Email</label>
               <input type="email" name="email" id="email" placeholder="">
