--- a/about.html
+++ b/about.html
@@ -75,10 +75,10 @@
         <h2>Qui sommes-nous?</h2>
         <p>Nous sommes une société spécialisée dans la vente des habits, sacs, accessoires,...</p>
         <p>Nous offrons un service de livraison rapide et gratuite. il suffit de nous contacter et de passer votre commande en ligne</p>
-        <p>Abonnez-vous à la <a href="#newsletter">newsleter</a> pour être informé de noud nouveaux produits</p>
+        <p>Abonnez-vous à la <a href="#newsletter">newsleter</a> pour être informé de nos nouveaux produits</p>
         <p>Ce site a été développé par <a href="https://caleblyc.github.io/mon-app" target="_blank">Caleb LYC</a>. Voir son <a href="" target="_blank">portfolio</a></p>
         <p>Toute personne désireuse d'avoir un site de ce genre peut nous contacter sur le <span class="number">+228 91982996</span> ou nous laisser un mail <a href="mailto:@caleblyc.com">ici</a></p>
-        <p>Un site de ce genre lui sera développé voir un site e-commerce complet selon ses besoins, ses goûts et ses préférences.</p>
+        <p>Un site de ce genre lui sera développé voire un site e-commerce complet selon ses besoins, ses goûts et ses préférences.</p>
     </div>
 
       <div class="avis">
