--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         <p>Nous offrons un service de livraison rapide et gratuite. il suffit de nous contacter et de passer votre commande en ligne</p>
         <p>Abonnez-vous à la <a href="#newsletter">newsleter</a> pour être informé de nos nouveaux produits</p>
         <p>Ce site a été développé par <a href="https://caleblyc.github.io/mon-app" target="_blank">Caleb LYC</a>. Voir son <a href="" target="_blank">portfolio</a></p>
-        <p>Toute personne désireuse d'avoir un site de ce genre peut nous contacter sur le <span class="number">+228 91982996</span> ou nous laisser un mail <a href="mailto:@caleblyc.com">ici</a></p>
+        <p>Toute personne désireuse d'avoir un site de ce genre peut nous contacter sur le <a href="https://wa.me/+22891982996">+228 91982996</a> ou nous laisser un mail <a href="mailto:@caleblyc.com">ici</a></p>
         <p>Un site de ce genre lui sera développé voire un site e-commerce complet selon ses besoins, ses goûts et ses préférences.</p>
     </div>
 
@@ -90,40 +90,40 @@
     </main>
 
     <footer>
-      <div class="social-network">
-        <h3>Nos réseaux sociaux</h3>
-        <ul>
-          <li><img src="assets/img/icons/facebook.png" width="30" height="30" alt="icon"><a href="">  facebook</a></li>
-          <li><img src="assets/img/icons/whatsapp.png" width="30" height="30" alt="icon"><a href="">  whastapp</a></li>
-          <li><a href="">  Ali baba</a></li>
-          <li><img src="assets/img/icons/instagram.png" width="30" height="30" alt="icon"><a href="">  instagram</a></li>
-          <li><img src="assets/img/icons/linkedin.png" width="30" height="30" alt="icon"><a href="">  linkdin</a></li>
-        </ul>
-      </div>
-      <div class="usProducts">
-        <h3><a href="#products">Nos produits</a></h3>
-        <ul>
-          <li><img src="assets/img/icons/bag.png" width="30" height="30" alt="icon">  <a href="">Sacs</a></li>
-          <li><img src="assets/img/icons/clothes.png" width="30" height="30" alt="icon">  <a href="">Vêtements</a></li>
-          <li><img src="assets/img/icons/jewelry.png" width="30" height="30" alt="icon">  <a href="">Accessoires</a></li>
-        </ul>
-      </div>
-      <div class="contacts">
-        <h3 id="contacts">Contacts</h3>
-        <ul>
-          <li><img src="assets/img/icons/telephone.png" width="30" height="30" alt="icon">  tel: +228 91982996</li>
-          <li><img src="assets/img/icons/gmail.png" width="30" height="30" alt="icon">  email <a href="mailto:caleblyc@gamail.com">caleblyc@gmail.com</a></li>
-          <h3>S'abonner à la newsletter</h3>
-          <form action="" method="POST" id="newsletter">
-            <div class="email">
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email" placeholder="">
-            </div>
-            <button type="submit" name="submit"><img src="assets/img/icons/subscribe .png" alt="Subscribe" width="60" height="60"></button>
-          </form>
-        </ul>
-      </div>
-    </footer>
+        <div class="social-network">
+          <h3>Nos réseaux sociaux</h3>
+          <ul>
+            <li><img src="assets/img/icons/facebook.png" width="30" height="30" alt="icon"><a href="https://www.facebook.com/caleb.lyc.7">  facebook</a></li>
+            <li><img src="assets/img/icons/whatsapp.png" width="30" height="30" alt="icon"><a href="https://wa.me/+22891982996">  whastapp</a></li>
+            <li><a href="#">  Ali baba</a></li>
+            <li><img src="assets/img/icons/instagram.png" width="30" height="30" alt="icon"><a href="https://www.instagram.com/lyc_caleb/">  instagram</a></li>
+            <li><img src="assets/img/icons/linkedin.png" width="30" height="30" alt="icon"><a href="#">  linkdin</a></li>
+          </ul>
+        </div>
+        <div class="usProducts">
+          <h3><a href="#products">Nos produits</a></h3>
+          <ul>
+            <li><img src="assets/img/icons/bag.png" width="30" height="30" alt="icon">  <a href="#products">Sacs</a></li>
+            <li><img src="assets/img/icons/clothes.png" width="30" height="30" alt="icon">  <a href="#products">Vêtements</a></li>
+            <li><img src="assets/img/icons/jewelry.png" width="30" height="30" alt="icon">  <a href="#products">Accessoires</a></li>
+          </ul>
+        </div>
+        <div class="contacts">
+          <h3 id="contacts">Contacts</h3>
+          <ul>
+            <li><img src="assets/img/icons/telephone.png" width="30" height="30" alt="icon">  tel: +228 91982996</li>
+            <li><img src="assets/img/icons/gmail.png" width="30" height="30" alt="icon">  email <a href="mailto:caleblyc@gamail.com">caleblyc@gmail.com</a></li>
+            <h3>S'abonner à la newsletter</h3>
+            <form action="" method="POST" id="newsletter">
+              <div class="email">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="">
+              </div>
+              <button type="submit" name="submit"><img src="assets/img/icons/subscribe .png" alt="Subscribe" width="60" height="60"></button>
+            </form>
+          </ul>
+        </div>
+      </footer>
 
     <script src="./assets/vendor/js/bootstrap.bundle.min.js" defer></script>
   </body>
