--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
       <div class="social-network">
         <h3>Nos réseaux sociaux</h3>
         <ul>
-          <li><img src="assets/img/icons/facebook.png" width="30" height="30" alt="icon"><a href="">  facebook</a></li>
-          <li><img src="assets/img/icons/whatsapp.png" width="30" height="30" alt="icon"><a href="">  whastapp</a></li>
-          <li><a href="">  Ali baba</a></li>
-          <li><img src="assets/img/icons/instagram.png" width="30" height="30" alt="icon"><a href="">  instagram</a></li>
-          <li><img src="assets/img/icons/linkedin.png" width="30" height="30" alt="icon"><a href="">  linkdin</a></li>
+          <li><img src="assets/img/icons/facebook.png" width="30" height="30" alt="icon"><a href="https://www.facebook.com/caleb.lyc.7">  facebook</a></li>
+          <li><img src="assets/img/icons/whatsapp.png" width="30" height="30" alt="icon"><a href="https://wa.me/+22891982996">  whastapp</a></li>
+          <li><a href="#">  Ali baba</a></li>
+          <li><img src="assets/img/icons/instagram.png" width="30" height="30" alt="icon"><a href="https://www.instagram.com/lyc_caleb/">  instagram</a></li>
+          <li><img src="assets/img/icons/linkedin.png" width="30" height="30" alt="icon"><a href="#">  linkdin</a></li>
         </ul>
       </div>
       <div class="usProducts">
         <h3><a href="#products">Nos produits</a></h3>
         <ul>
-          <li><img src="assets/img/icons/bag.png" width="30" height="30" alt="icon">  <a href="">Sacs</a></li>
-          <li><img src="assets/img/icons/clothes.png" width="30" height="30" alt="icon">  <a href="">Vêtements</a></li>
-          <li><img src="assets/img/icons/jewelry.png" width="30" height="30" alt="icon">  <a href="">Accessoires</a></li>
+          <li><img src="assets/img/icons/bag.png" width="30" height="30" alt="icon">  <a href="#products">Sacs</a></li>
+          <li><img src="assets/img/icons/clothes.png" width="30" height="30" alt="icon">  <a href="#products">Vêtements</a></li>
+          <li><img src="assets/img/icons/jewelry.png" width="30" height="30" alt="icon">  <a href="#products">Accessoires</a></li>
         </ul>
       </div>
       <div class="contacts">
