--- a/about.html
+++ b/about.html
@@ -77,14 +77,42 @@
         <p>Nous offrons un service de livraison rapide et gratuite. il suffit de nous contacter et de passer votre commande en ligne</p>
         <p>Abonnez-vous à la <a href="#newsletter">newsleter</a> pour être informé de nos nouveaux produits</p>
         <p>Ce site a été développé par <a href="https://caleblyc.github.io/mon-app" target="_blank">Caleb LYC</a>. Voir son <a href="" target="_blank">portfolio</a></p>
-        <p>Toute personne désireuse d'avoir un site de ce genre peut nous contacter sur le <a href="https://wa.me/+22891982996">+228 91982996</a> ou nous laisser un mail <a href="mailto:@caleblyc.com">ici</a></p>
+        <p>Toute personne désireuse d'avoir un site de ce genre peut nous contacter sur le <a href="https://wa.me/+22891982996" target="_blank">+228 91982996</a> ou nous laisser un mail <a href="mailto:@caleblyc.com">ici</a></p>
         <p>Un site de ce genre lui sera développé voire un site e-commerce complet selon ses besoins, ses goûts et ses préférences.</p>
     </div>
 
       <div class="avis">
         <h3>Avis de nos client</h3>
+        <div class="avisContainer active">
+          <div class="user-img">
+            <img src="assets/img/user1.png" alt="User1" width="80" height="80">
+          </div>
+          <div class="avis-message">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam error exercitationem rerum eaque adipisci voluptate reiciendis architecto debitis dolorum modi?
+          </div>
+        </div>
         <div class="avisContainer">
+          <div class="user-img">
+            <img src="assets/img/user.png" alt="User1" width="80" height="80">
+          </div>
+          <div class="avis-message">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil fuga officiis repellendus possimus voluptates, pariatur animi sequi ducimus rerum dolor vel voluptatem. Fugiat, cupiditate itaque, nemo tenetur a cum magni ea assumenda obcaecati culpa laboriosam corporis molestiae ipsum quo necessitatibus fuga id cumque autem earum?          </div>
+        </div>
+        <div class="avisContainer">
+          <div class="user-img">
+            <img src="assets/img/user-img1.jpg" alt="User1" width="80" height="80">
+          </div>
+          <div class="avis-message">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nisi saepe deleniti accusamus id? Nostrum cum molestiae nam impedit necessitatibus suscipit error ullam odit quisquam accusamus, reprehenderit id expedita architecto at perspiciatis earum enim quasi et facilis eveniet delectus facere.          </div>
+        </div>
 
+        <div class="direction">
+          <div class="previous">
+            <img src="assets/img/icons/left-chevron.png" alt="precedent">
+          </div>
+          <div class="follow">
+            <img src="assets/img/icons/right-chevron.png" alt="suivant">
+          </div>
         </div>
       </div>
     </main>
@@ -113,7 +141,8 @@
           <ul>
             <li><img src="assets/img/icons/telephone.png" width="30" height="30" alt="icon">  tel: +228 91982996</li>
             <li><img src="assets/img/icons/gmail.png" width="30" height="30" alt="icon">  email <a href="mailto:caleblyc@gamail.com">caleblyc@gmail.com</a></li>
-            <h3>S'abonner à la newsletter</h3>
+          </ul>
+          <h3>S'abonner à la newsletter</h3>
             <form action="" method="POST" id="newsletter">
               <div class="email">
                 <label for="email">Email</label>
@@ -121,10 +150,10 @@
               </div>
               <button type="submit" name="submit"><img src="assets/img/icons/subscribe .png" alt="Subscribe" width="60" height="60"></button>
             </form>
-          </ul>
         </div>
       </footer>
 
     <script src="./assets/vendor/js/bootstrap.bundle.min.js" defer></script>
+    <script src="assets/js/about.js"></script>
   </body>
 </html>
