--- a/about.html
+++ b/about.html
@@ -108,10 +108,10 @@
 
         <div class="direction">
           <div class="previous">
-            <img src="assets/img/icons/left-chevron.png" alt="precedent">
+            <img src="assets/img/icons/left-chevron.png" alt="precedent" width="25" height="25">
           </div>
           <div class="follow">
-            <img src="assets/img/icons/right-chevron.png" alt="suivant">
+            <img src="assets/img/icons/right-chevron.png" alt="suivant" width="25" height="25">
           </div>
         </div>
       </div>
